welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: ';' expected but 'else' found.
else if (getCouleurSol()== Color.green) {b=true}
^